# hierarchical-action-vq

./: .gitignore  CODE_MAP.md  EXPERIMENTS.md  PLAN.md  PROBE_REPORT.md  README.md  RELATED_WORKS.md  RESEARCH.md  RESEARCH_STRUGGLE.md  STYLE.md  UV_ON_COMPUTE_CANADA.md  VQVAE_PIVOT_DESIGN.md  cc_initialize.sh  check_compute_internet.slurm  config.yaml  download_weights.py  make_shards.py  preprocess_data.sh  pyproject.toml  run_compare.py  run_gate.py  run_preprocessing.py  run_protected.sh  run_visualize.py  run_vjepa_extract.py
JOBS/: preprocess_clip10.slurm  preprocess_clip90.slurm
analysis_results/probe_clip10/: probe_report.json  temporal_split_report.json
analysis_results/probe_clip90/: probe_report.json
archive/v2-vjepa-lapa/: README.md  cc_config.sh  cc_run_jobs.sh  config.yaml  preprocess_rorqual.slurm  run_hierarchy.py  run_lapa_tokenize.py
havq/: eval.py  features.py  gt.py  train.py
havq/analysis/: factor.py  probe.py  temporal_split.py
havq/configs/: config.yaml
havq/model/: vq.py
havq/trainer/: train_lam.py
havq/visualization/: visualize_lapa.py
hicap/: PLAN.md  REPORT_2026-07-21.md  REPORT_2026-07-21_multibenchmark.md  RESULT_gate.md  VJEPA_PLAN.md
hicap/configs/: compare_50salads.yaml  gate_50salads.yaml  vjepa_breakfast.yaml
hicap/data/: salads.py  tas.py  vjepa_extract.py
hicap/eval/: baselines.py  boundary.py  compare.py  gate.py  ksens.py  tas_metrics.py
hicap/segment/: hierarchy.py
hicap/slurm/: extract_vjepa.slurm
hicap/utils/: config.py
shards/: shard_0.txt  shard_1.txt  shard_2.txt  shard_5.txt  shard_6.txt
(+34 files in other folders)
