[project]
name = "havq"
version = "0.1.0"
description = "Hierarchical action discovery via NSVQ latent-action tokens on frozen V-JEPA features"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    # Numerical / scientific
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    # V-JEPA backbone
    "transformers>=4.36.0,<5.0",
    "huggingface-hub>=0.19.3",
    # vendored LAPA LAQ tokenizer (havq/model/laq/) -- its only deps
    "einops>=0.7",
    "beartype>=0.18",
    # Video / image IO
    "av>=17.0.0",
    "pillow>=10.0.0",
    # Config & utilities
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["havq"]
